--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "chalk": "^2.4.2",
     "clean-css": "^4.2.1",
     "constantinople": "^3.1.2",
     "cookie-parser": "~1.4.4",
