--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "prettier": "^1.18.2"
   }
 }
